# setup_for_arm_dev

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  utils.cmake
sources/application/: main.c
sources/hardware/: gcc_startup_nrf52.S
